Implement AudioWrapper, Library

--- a/Assets/_CocoonDev/CocoonDev.Foundation.Audio/CocoonDev.Foundation.Audio.asmdef
+++ b/Assets/_CocoonDev/CocoonDev.Foundation.Audio/CocoonDev.Foundation.Audio.asmdef
@@ -1,7 +1,12 @@
 {
     "name": "CocoonDev.Foundation.Audio",
     "rootNamespace": "CocoonDev.Foundation.Audio",
-    "references": [],
+    "references": [
+        "UniTask",
+        "ZBase.Foundation.Pooling",
+        "CocoonDev.Foundation.UniEnum",
+        "PrimeTween.Runtime"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
