--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "com.cocoondev.foundation.unienum": "https://github.com/thanhloccc/CocoonDev.Foundation.UniEnum.git?path=Assets/_CocoonDev/CocoonDev.Foundation.UniEnum",
+    "com.cysharp.unitask": "2.5.5",
     "com.kyrylokuzyk.primetween": "file:../Assets/Plugins/PrimeTween/internal/com.kyrylokuzyk.primetween.tgz",
     "com.unity.collab-proxy": "2.4.4",
     "com.unity.feature.development": "1.0.1",
@@ -7,6 +9,9 @@
     "com.unity.timeline": "1.7.6",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.9.4",
+    "com.zbase.collections.pooled": "2.8.4",
+    "com.zbase.foundation.pooling": "2.3.3",
+    "org.nuget.system.runtime.compilerservices.unsafe": "6.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
@@ -47,9 +52,7 @@
         "org.nuget.system.runtime.compilerservices.unsafe",
         "com.cysharp.unitask",
         "com.zbase.collections.pooled",
-        "com.zbase.foundation.pooling",
-        "com.annulusgames.tween-playables",
-        "com.cysharp.zstring"
+        "com.zbase.foundation.pooling"
       ]
     }
   ]
