--- a/Assets/_CocoonDev/CocoonDev.Foundation.Audio/package.json
+++ b/Assets/_CocoonDev/CocoonDev.Foundation.Audio/package.json
@@ -3,7 +3,7 @@
     "displayName": "CocoonDev.Foundation.Audio",
     "version": "1.0.1",
     "unity": "2022.3",
-    "documentationUrl": "https://github.com/thanhloccc/CocoonDev.Foundation/blob/main/README.md",
+    "documentationUrl": "https://github.com/thanhloccc/CocoonDev.Foundation.Audio/blob/main/README.md",
     "dependencies": {
         "org.nuget.system.runtime.compilerservices.unsafe": "6.0.0",
         "com.cysharp.unitask": "2.5.5",
